# random_exp

0001_c4/connect4_alphazero/: README.md  pyproject.toml  requirements.txt  test_checkpoint.pt
0001_c4/connect4_alphazero/checkpoints/: iter_0000.pt  iter_0001.pt  iter_0002.pt  iter_0003.pt  latest.pt
0001_c4/connect4_alphazero/logs/: events.out.tfevents.1778932513.takamiya3090.10195.0  events.out.tfevents.1778932538.takamiya3090.10401.0  events.out.tfevents.1778933921.takamiya3090.13752.0
0001_c4/connect4_alphazero/scripts/: evaluate.py  play.py  train.py
0001_c4/connect4_alphazero/src/connect4/: __init__.py  arena.py  cli.py  game.py  mcts.py  model.py  players.py  self_play.py  train.py  utils.py
