[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connect4-alphazero"
version = "0.1.0"
description = "Connect4 with AlphaZero-lite self-play training"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "tensorboard>=2.16",
    "tqdm>=4.66",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.1"]

[tool.setuptools.packages.find]
where = ["src"]
